# TypeART

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
datalib/: CMakeLists.txt  DataDB.cpp  DataDB.h  DataIO.cpp  DataIO.h  TaData.h
demo/: .gitignore  01_struct_example.c  02_broken_struct_example.c  CMakeLists.txt  Makefile  applyPass.sh  tool.c  toy.c  types.yaml
lib/: CMakeLists.txt  Logger.h  MUSTSupportPass.cpp  MUSTSupportPass.h  MemOpVisitor.cpp  MemOpVisitor.h  TypeARTPass.cpp  TypeARTPass.h  TypeManager.cpp  TypeManager.h  TypeMapping.cpp  TypeMapping.h  TypeUtil.cpp  TypeUtil.h
lib/analysis/: CGFilter.h  CGFilterNoArg.h  CMakeLists.txt  Filter.h  MemInstFinderPass.cpp  MemInstFinderPass.h  MemOpData.h  MemOpVisitor.cpp  MemOpVisitor.h  StandardFilter.h
lib/filter/: CGFilter.cpp  CGFilter.h  CGForwardFilter.cpp  CGForwardFilter.h  CGInterface.cpp  CGInterface.h  CMakeLists.txt  Filter.h  FilterBase.h  FilterUtil.cpp  FilterUtil.h  IRPath.h  IRSearch.h  Matcher.h  StandardFilter.cpp  StandardFilter.h  StdForwardFilter.cpp  StdForwardFilter.h
lib/instrumentation/: ArgCollector.h  Instrumentation.cpp  Instrumentation.h  InstrumentationHelper.cpp  InstrumentationHelper.h  MemOpArgCollector.cpp  MemOpArgCollector.h  MemOpInstrumentation.cpp  MemOpInstrumentation.h  TransformUtil.h  TypeARTFunctions.cpp  TypeARTFunctions.h
lib/mpi_interceptor/: CMakeLists.txt  Config.cpp  Config.h  Error.h  InterceptorFunctions.cpp  InterceptorFunctions.h  Logger.cpp  Logger.h  README.md  Stats.h  TypeCheck.cpp  TypeCheck.h  Types.h  Util.cpp  Util.h  mpi_interceptor_tmpl.impl  wrap.py
lib/passes/: CMakeLists.txt  Commandline.cpp  Commandline.h  TypeARTConfiguration.cpp  TypeARTConfiguration.h  TypeARTPass.cpp  TypeARTPass.h  TypeManager.cpp  TypeManager.h
lib/preload/: CMakeLists.txt  Lib.c
lib/runtime/: AccessCountPrinter.h  AccessCounter.h  AllocMapWrapper.h  AllocationTracking.cpp  AllocationTracking.h  CMakeLists.txt  CallbackInterface.h  CudaRuntimeInterface.h  CudaSupport.cpp  OldRuntime.cpp  OldRuntime.h  ParityConstant.h  Runtime.cpp  Runtime.h  RuntimeData.h  RuntimeInterface.h  RuntimeUtils.cpp  RuntimeUtils.h  TypeResolution.cpp  TypeResolution.h  Version.cpp.in
lib/support/: CGInterface.cpp  CGInterface.h  CMakeLists.txt  Configuration.h  ConfigurationBase.h  ConfigurationBaseOptions.h  FileConfiguration.cpp  FileConfiguration.h  InstrumentationHelper.cpp  InstrumentationHelper.h  Logger.h  MPILogger.cpp  ModuleDataManager.cpp  ModuleDataManager.h  ModuleManagerBase.cpp  ModuleManagerBase.h  System.cpp  System.h  Table.h  TypeARTOptions.cpp  TypeARTOptions.h  TypeUtil.cpp  TypeUtil.h  Util.h
lib/typelib/: CMakeLists.txt  TypeDB.cpp  TypeDB.h  TypeDatabase.h  TypeIO.cpp  TypeIO.h  TypeInterface.h
runtime/: AccessCounter.h  CMakeLists.txt  CallbackInterface.h  Counter.h  Logger.h  MPILogger.cpp  Runtime.cpp  Runtime.h  RuntimeData.h  RuntimeInterface.h  RuntimeUtil.h  StackWrapper.h  runtime.cpp  runtime.h  typecheck_macro.h
runtime/tycart/: CMakeLists.txt  TyCartRT.cpp  TycartRT.cpp  tycart.h  typecheck_macro.h
scripts/: CMakeLists.txt  apply.sh.in  applyAndRun-tycart.sh  applyAndRun.sh  applyPass.sh  clang-typeart++.in  clang-typeart.in  llvm-gcov.sh.in  opt-shim.in  reduce-tester.in  run.sh.in  show-source-ll.sh  typeart-tmpl.sh.in  typeart-wrapper.in  typeart-wrapperv2.in  typeart_ir_compare.py  typeart_ir_viewer.py
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  struct_defs.h
test/arrays/: 01_simple_array.c  02_array_to_pointer.c
test/lulesh/: .gitignore  CMakeLists.txt  Makefile  buildAndApplyPass.sh  lulesh-init.cc  lulesh.h  lulesh_tuple.h  run_integration_test.sh
test/malloc_free/: 01_simple_malloc_int.c  02_simple_malloc_free_int.c  03_simple_malloc_free_double.c  04_simple_malloc_int_double.c  05_simple_malloc_struct.c  06_simple_malloc_void_type.c  07_simple_malloc_free_void_type.c  08_simple_malloc_struct_void.c  09_malloc_with_disjunct_free.c  10_malloc_multiple_casts.c
test/mpi_interceptor/: CMakeLists.txt  InterceptorFunctions.h  mpi_interceptor_tmpl.impl  wrap.py
test/mpi_typecheck/: 01_MPI_Double.cpp  02_MPI_Type_contiguous.cpp  03_MPI_Type_contiguous_recursive.cpp  04_MPI_Type_dup.cpp  05_MPI_Type_vector.cpp  06_MPI_Type_struct.cpp  07_struct_ambiguous_type.cpp  08_MPI_Type_create_subarray.cpp  09_MPI_Type_create_indexed_block.cpp  10_null_count.cpp  11_null_buffer.cpp  12_unsupported_comm.c  13_missing_buffer.cpp  14_MPI_Char.cpp  15_MPI_Byte.cpp  16_104_milc.cpp  17_Source_Location_error.cpp  18_Source_Location_all.cpp  19_Stacktrace.cpp  20_hvector.c  20_indexed.c  21_hindexed.c  22_hindexed_block.c  23_hvector_fail.c  24_hvector_contiguous.c  24_struct_single_member.c  25_vector_struct_fail.c  26_vector_struct_success.c  27_hvector_struct_success.c  Util.hpp
test/newpm/: 01_new.cpp
test/runtime/: 01_malloc.c  01_malloc_trace.c  02_int_array.c  02_malloc_unsigned_trace.c  03_matrix_mult.c  03_new_trace.cpp  04_alloca_trace.c  04_void_ptr_conversion.c  05_alloca_unsigned_trace.c  06_simple_array_type_check.cpp  07_simple_struct_type_check.c  08_recursive_struct_type_check.c  09_aos_type_check.c  10_vector_fill_demo.c  11_matrix_mult_demo.c  12_alloc_multi.c  13_alloca_vla.c  14_alloca_vector.c  15_malloc_zero.c  16_inv_struct.cpp  16_type_assert.cpp  17_inv_array.cpp  18_softcounter_empty.c  19_softcounter.c  20_softcounter_max.c  21_runtime_manual.cpp  22_threads_stack.cpp  23_threads_heap.cpp  24_threads_type_check.cpp  25_omp_stack.c  26_omp_heap.c  27_omp_softcounter.c  28_omp_softcounter_stack.c  29_omp_concurrent_rwx.cpp  29_threads_concurrent_rwx.cpp  30_omp_concurrent_w.cpp  31_omp_overwrite.cpp  32_addresses.c  33_inexistant_typecheck.c  34_off_by_n.cpp  (+21 more)
test/script/: 01_wrapper_cxx.cpp  01_wrapper_internal.sh  02_wrapper_mpi_internal.sh  03_wrapper_cxx.cpp  04_wrapper_cc.c  05_wrapper_mpicxx.cpp  (+11 more)
typelib/: CMakeLists.txt  ConfigIO.cpp  TypeConfig.cpp  TypeConfig.h  TypeDB.cpp  TypeDB.h  TypeIO.cpp  TypeIO.h  TypeInterface.h
(+338 files in other folders)
